# lang_chain_rag

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  streamlit_app.py
data/: eval_set.yaml  ingested_at.txt  sources.yaml
reports/: eval-report.md
scripts/: discover_sources.py  eval.py  ingest.py
src/hdb_rag/: chain.py  chunk_cache.py  config.py  prompts.py  stores.py
src/hdb_rag/discovery/: emitter.py  filters.py  politeness.py  sitemap.py
src/hdb_rag/eval/: metrics.py  report.py  runner.py
src/hdb_rag/ingest/: loaders.py  pipeline.py  splitter.py
src/hdb_rag/retrieval/: bm25.py  compression.py  diagnostics.py  factory.py  hybrid.py  multi_query.py
tests/: test_bm25.py  test_chain.py  test_chunk_cache.py  test_compression.py  test_diagnostics.py  test_emitter.py  test_eval_runner.py  test_filters.py  test_ingest_pipeline.py  test_loaders.py  test_metrics.py  test_multi_query.py  test_retrieval_factory.py  test_sitemap.py  test_splitter.py
tests/fixtures/: sample_page.html
